k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world 
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
